--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@ footer {
 .menu-section {
     max-width: 1200px;
     margin: 0 auto 30px auto;
+    text-align: center;
 }
 
 .menu-section img {
